chore: GitHubのリンクを修正

--- a/config/_default/menus/menu.ja.toml
+++ b/config/_default/menus/menu.ja.toml
@@ -15,7 +15,7 @@
 [[main]]
   parent = "Links"
   name = "Github"
-  url = "https://github.com/grain_sb"
+  url = "https://github.com/grainrigi"
 
 [[main]]
   name = "About"
