feat: 関連記事を表示

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -22,3 +22,9 @@ series = "series"
 
 [outputs]
 home = ["HTML", "RSS", "JSON"]
+
+[related]
+  includeNewer = true
+[[related.indices]]
+  name = 'tags'
+  weight = 100
