--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -126,8 +126,8 @@ languageMenuName = "🌐"
 # since = 2016
 
 # Show related content at the end of an article based on the 'series' taxonomy. Can be set in post front matter.
-# showRelatedInArticle = false
-# showRelatedInSidebar = false
+showRelatedInArticle = true
+showRelatedInSidebar = true
 
 # website author
 [author]
