chore: 関連記事数を3個に減らした

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -106,7 +106,7 @@ languageMenuName = "🌐"
 # utterancesIssueTerm = "pathname" # Default: pathname
 
 # Maximum number of recent posts. (default: 8)
-# numberOfRecentPosts = 8
+numberOfRecentPosts = 3
 
 # Maximum number of featured posts. (default: 8)
 # numberOfFeaturedPosts = 8
